# kehrnel

./: .dockerignore  .drone  .drone.yml  .env.example  .gitignore  .pre-commit-config.yaml  :memory:  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.openehr  LICENSE  NOTICE  README-dev.md  README.md  docker-compose.dev.yml  docker-compose.yml  folder_structure.txt  pyproject.toml  startKehrnel  tmp_reg.json
.github/workflows/: ci.yml  deploy.yml  quality-security.yml  secret-scanner.yml
.kehrnel/: translations.json
.kehrnel/bundles/: openehr.analytics.sample.v1.json
common/: insert_compositions.py  retrieve_compositions.py
docs/: README.md  cli-api-reference.md  con2l-negotiation-and-runtime.md  contextobjects-runtime-overview.md  contextobjects-strategy-ops.md  hdl-contract.md  hdl-kehrnel-contextobjects-contract.md  hdl-kehrnel-synthetic-contract-v2.md  hdl-migration-checklist.md  objectmaps-runtime.md  refactor-plan.md  status-aql-parity.md  strategies-guide.md  tenant-context-catalog-publication.md
docs/website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/website/docs/: intro.md
environments/: prod-openehr.yaml  prod.yaml  staging-openehr.yaml  staging.yaml
examples/: README.md
examples/api/: curl_flow.sh
examples/cli/: full_workflow_console.sh  pipeline.sh
examples/sdk/: runtime_embed_example.py
fhir_definitions/mcode/package/: .index.json  CapabilityStatement-mcode-receiver-cancer-conditions-then-patients.json  CapabilityStatement-mcode-receiver-patient-bundle.json  ValueSet-mcode-hgvs-vs.json  (+39 more)
frontend/: Dockerfile  README-OpenAPI-Integration.md  README.md  next.config.ts  package-lock.json  package.json  test-api-connection.js
samples/in/: CRFicheConsultation.xml  CRHospitalier.xml  CRReunionConcertationPluridisciplinaire.xml  pmsi.xml
samples/mappings/: biology_mapping.yaml  biology_mappingV2.yaml  hads-v0.es.mapping.yaml  hads.yaml  neuroqol.skeleton.yaml  neuroqol.yaml  new.yaml  pmsi-openehr-complete-mapping.yaml  tumour_mapping copy 2.yaml  tumour_mapping copy.yaml  tumour_mapping.yaml  whoqol.yaml
samples/templates/: T-IGR-BIOLOGY.opt  T-IGR-PMSI-EXTRACT.opt  T-IGR-TUMOUR-SUMMARY.opt  hads_v0.json  hads_v0.opt  hads_v0.t.json  neuroqol_v0.json  neuroqol_v0.opt  whoqol_v0.json  whoqol_v0.opt
src/adapters/: __init__.py  base.py  mongo_storage.py  opensearch_search.py  search_base.py
src/app/: main.py  requirements.txt  strategy_runtime.py
src/aql/: __init__.py  router.py
src/aql_parser/: aql_to_ast.py  ast_example.py  parser.py  validator.py
src/cli/: bundles.py  generate.py  identify.py  ingest.py  map copy 2.py  map copy.py  map.py  map_skeleton.py  skeleton.py  transform.py  validate.py  validate_pack.py
src/core/: generator copy.py  generator.py  models.py  parser.py  validator.py
src/ingest/: __init__.py  bulk.py  fs.py  ingest.py  mongo.py
src/kehrnel/: __init__.py  cli.py
src/mapper/: document_identifier.py  mapping_engine copy.py  mapping_engine.py  skeleton.py  transforms.py
src/mapperOLD/: __init__.py  mapping_engine.py  patterns.yaml
src/persistence/: __init__.py  fs.py  memory.py  mongo.py  strategy.py
src/strategies/: __init__.py
src/strategy_runtime/: __init__.py  bindings.py  models.py  registry.py  router.py  selector.py  store.py
src/strategy_sdk/: manifest.py  plugin.py  runtime.py
src/transform/: _bulk_flatten.py  at_code_codec.py  core.py  flattener_g.py  reverse_unflatten.py  rules_engine.py  single.py
tests/: conftest.py
tests/contract/: __init__.py  test_activation_defaults_merge.py  test_activation_fails_if_bundle_missing.py  test_activation_idempotent_switch.py  test_activation_integrity.py  test_activation_strategy_compat.py  test_api_contract.py  test_api_endpoints_registry.py  test_api_full_contract.py  test_ast_adapter_conformance.py  test_atlas_search_compile.py  test_bundle_validator.py  test_bundles_api_crud.py  test_compile_explain_has_engine_and_activation_metadata.py  test_compile_explain_keys_all_strategies.py  test_config_validation.py  test_dict_cache.py  test_domain_activation_ownership.py  test_domain_contracts.py  test_environment_endpoints.py  test_environment_registry_crud.py  test_error_schema.py  test_golden_aql_match.py  test_golden_aql_search.py  test_golden_cross_patient_legacy_pipeline.py  test_golden_cross_patient_search_embedded.py  test_golden_patient_legacy_pipeline.py  test_golden_patient_regex_paths.py  test_golden_vaccinations_cross_patient_projection.py  test_golden_vaccinations_patient_projection.py  test_legacy_ast_adapter_conformance.py  test_manifest_discovery_failfast.py  test_multi_strategy_activation.py  test_no_duplicate_mongo_modules.py  test_no_forbidden_imports.py  test_ops_endpoints.py  test_path_resolver_config.py  test_projection_compiler.py  test_projection_lookup.py  test_protocol_routing.py  (+19 more)
tests/e2e/: __init__.py  test_rps_dual_query_engines.py
tests/helpers/: fake_runtime.py  fixture_storage.py
tests/legacy_src/: test_flatten.py  test_reverse.py  test_roundtrip.py
tests/smoke/: test_smoke_suite.py
tests/unit/: test_admin_runtime_json_safe.py  test_api_cli.py  test_aql_bridge_rps_dual_dictionaries.py  test_composition_delete_route.py  test_composition_repository_flatten_insert.py  test_composition_service_version_uid.py  test_contextobjects_runtime.py  test_dictionary_bootstrap_cache.py  test_ehr_delete_cascade.py  test_encoding_profiles.py  test_environment_cli.py  test_ingest_cli.py  test_ingest_runtime_fast_path.py  test_legacy_openehr_runtime_sync.py  test_mapping_compiler_v2.py  test_openehr_template_generation_validation.py  test_path_resolver_encoding.py  test_persistence_search_partition.py  test_rps_dual_default_config_alignment.py  test_rps_dual_ibm_strategy.py  test_rps_dual_nested_contains_compile.py  test_rps_dual_query_executor.py  test_rps_dual_raw_aql_strategy_compile.py  test_rps_dual_sample_pack.py  test_rps_dual_strategy_ingest_batch.py  test_rps_dual_versioning.py  test_search_index_definition_builder.py  test_strategy_runtime_cache.py  test_unified_cli_run.py
(+5444 files in other folders)
