[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kehrnel-core"
version = "0.1.0"
description = "kehrnel core, mapper and CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]

# hard runtime deps that *every* install needs
dependencies = [
    "PyYAML>=6",
    "tabulate>=0.9",
    "lxml>=4.9",  # Added for XML parsing
]

[project.optional-dependencies]
cli   = ["typer[all]>=0.9", "json5>=0.9"]   
mongo = ["pymongo>=4"]          # only if you want Mongo persistence
api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "motor>=3.3",  # Async MongoDB driver
    "python-multipart>=0.0.6",  # For file uploads
    "pydantic>=2.5",
]
all = [
    "typer[all]>=0.9",
    "json5>=0.9",
    "pymongo>=4",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "motor>=3.3",
    "python-multipart>=0.0.6",
    "pydantic>=2.5",
]

[project.scripts]
kehrnel-generate = "cli.generate:app"
kehrnel-map      = "cli.map:app"
kehrnel-validate = "cli.validate:app"
kehrnel-ingest   = "cli.ingest:app"
kehrnel-transform= "cli.transform:app"
kehrnel-api      = "api.internal.api_server:main"  # New API server command


# ---------------------------------------------------------------------------
# tell setuptools to use the `src/` layout
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "cli",
    "core",
    "mapper",
    "ingest",
    "persistence",
    "api",
    "api.internal",  # Added for the internal API
    "aql",
    "transform",
]

# ---------------------------------------------------------------------------
# Development dependencies
# ---------------------------------------------------------------------------
[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# ---------------------------------------------------------------------------
# Optional: Configure uvicorn for development
# ---------------------------------------------------------------------------
[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
log-level = "info"