[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kehrnel-core"
version = "0.1.0"
description = "kehrnel core, mapper and CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]

# Hard runtime deps
dependencies = [
    "PyYAML>=6",
    "tabulate>=0.9",
    "lxml>=4.9",
    "Jinja2>=3.1"
]

[project.optional-dependencies]
# CLI tooling
cli = [
    "typer[all]>=0.9",
    "json5>=0.9",
    "Jinja2>=3.1"
]

# Translation (OpenAI SDK v1+)
translate = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

# Optional persistence
mongo = ["pymongo>=4"]

# Optional API stack
api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "motor>=3.3",
    "python-multipart>=0.0.6",
    "pydantic>=2.5"
]

# Kitchen-sink install
all = [
    "typer[all]>=0.9",
    "json5>=0.9",
    "Jinja2>=3.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "motor>=3.3",
    "python-multipart>=0.0.6",
    "pydantic>=2.5"
]

[project.scripts]
kehrnel-generate = "cli.generate:app"
kehrnel-identify = "cli.identify:app"
kehrnel-skeleton = "cli.skeleton:app"
kehrnel-map      = "cli.map:app"
kehrnel-map-skeleton = "cli.map_skeleton:main"
kehrnel-validate = "cli.validate:app"
kehrnel-ingest   = "cli.ingest:app"
kehrnel-transform= "cli.transform:app"
kehrnel-api      = "api.internal.api_server:main"

# ---------------------------------------------------------------------------
# Use src/ layout and auto-discover ALL subpackages
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

# ---------------------------------------------------------------------------
# Package data
# ---------------------------------------------------------------------------
[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]
"mapper" = ["patterns.yaml"]

# ---------------------------------------------------------------------------
# Optional: uvicorn dev settings
# ---------------------------------------------------------------------------
[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
log-level = "info"