[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kehrnel-core"
version = "0.1.0"
description = "kehrnel core, mapper and CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]

# Hard runtime deps
dependencies = [
    "PyYAML>=6",
    "tabulate>=0.9",
    "lxml>=4.9",
    "Jinja2>=3.1",
    "pydantic>=2.5",
    "jsonschema>=4.22"
]

[project.optional-dependencies]
# CLI tooling
cli = [
    "typer[all]>=0.9",
    "json5>=0.9",
    "Jinja2>=3.1"
]

# Translation (OpenAI SDK v1+)
translate = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

# Optional persistence
mongo = ["pymongo>=4"]

# Optional API stack
api = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "motor>=3.3",
    "certifi>=2024.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5"
]

# Kitchen-sink install
all = [
    "typer[all]>=0.9",
    "json5>=0.9",
    "Jinja2>=3.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "motor>=3.3",
    "certifi>=2024.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5"
]

[project.scripts]
kehrnel-generate = "kehrnel.legacy.cli.generate:app"
kehrnel-identify = "kehrnel.legacy.cli.identify:app"
kehrnel-skeleton = "kehrnel.legacy.cli.map_skeleton:app"
kehrnel-map      = "kehrnel.legacy.cli.map:app"
kehrnel-map-skeleton = "kehrnel.legacy.cli.map_skeleton:main"
kehrnel-validate = "kehrnel.legacy.cli.validate:app"
kehrnel-ingest   = "kehrnel.legacy.cli.ingest:app"
kehrnel-transform= "kehrnel.legacy.cli.transform:app"
kehrnel-api      = "kehrnel.api.app:main"
kehrnel-validate-pack = "kehrnel.legacy.cli.validate_pack:app"
kehrnel-validate-bundle = "kehrnel.legacy.cli.bundles:validate_bundle_cmd"
kehrnel-import-bundle = "kehrnel.legacy.cli.bundles:import_bundle_cmd"
kehrnel-list-bundles = "kehrnel.legacy.cli.bundles:list_bundles_cmd"
kehrnel-export-bundle = "kehrnel.legacy.cli.bundles:export_bundle_cmd"

# ---------------------------------------------------------------------------
# Use src/ layout and auto-discover ALL subpackages
# ---------------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["kehrnel*"]

# ---------------------------------------------------------------------------
# Package data
# ---------------------------------------------------------------------------
[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]
"kehrnel.common.mapping" = ["patterns.yaml"]

# ---------------------------------------------------------------------------
# Optional: uvicorn dev settings
# ---------------------------------------------------------------------------
[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
log-level = "info"
